--- a/views/kthsearch.jade
+++ b/views/kthsearch.jade
@@ -21,6 +21,7 @@ block content
         getInitialState: function() {
           return {
             data: [],
+            doSort: true,
             searching: false,
             didSearch: false,
             gotError: false,
@@ -51,6 +52,9 @@ block content
           console.log('Sending search for "' + query + '"');
           request.send();
         },
+        handleCheckbox: function(event) {
+          this.setState({doSort: event.target.checked});
+        },
         render: function() {
           var results;
           if (this.state.error) {
@@ -60,11 +64,21 @@ block content
           } else if (this.state.didSearch && this.state.data.length == 0) {
             results = <p>Inga resultat alls. Du stavade allt rätt, eller hur?</p>;
           } else {
-            results = <ResultList data={this.state.data} />;
+            var dataCopy = this.state.data.slice(0);
+            if (this.state.doSort === true) {
+              dataCopy.sort(function(a, b) {
+                return a.fullname.localeCompare(b.fullname);
+              }); 
+            } 
+            results = <ResultList data={dataCopy} />;
           }
           return (
               <div>
                 <SearchBar handleSubmit={this.handleSubmit} />
+                <p>
+                  <input type='checkbox' checked={this.state.doSort} onChange={this.handleCheckbox} />
+                  Sortera alfabetiskt
+                </p>
                 {results}
               </div>
           );
