--- a/views/position.jade
+++ b/views/position.jade
@@ -32,7 +32,7 @@ block content
                     a(href='/user/' + mandate.User.kthid)
                       = mandate.User.first_name + " " + mandate.User.last_name
                   th
-                    = groups[mandate.Role.GroupId-1].name
+                    = mandate.Role.Group.name
                   th
                     = mandate.Role.email
                   th #{prettyDate(mandate.start)}
