now uses pug instead of jade (jade changed name)

--- a/views/kthsearch.pug
+++ b/views/kthsearch.pug
@@ -3,7 +3,7 @@ extends layout
 block content
   div(id='content')
     div(class='row')
-      include sidebar.jade
+      include sidebar
       div(class='col-sm-8 col-md-9')
         h2 Sök efter personer på KTH med namn eller kthid.
         div(id='reactform')
