--- a/views/kthresults.pug
+++ b/views/kthresults.pug
@@ -3,7 +3,7 @@ extends layout
 block content
     div(id='content')
       div(class='row')
-        include sidebar.jade
+        include sidebar
         div(class='col-sm-8 col-md-9')
           h1 
             = "Resultat för \"" + query + "\":"
