--- a/views/position.pug
+++ b/views/position.pug
@@ -3,14 +3,16 @@ extends layout
 block content
     div(id='content')
       div(class='row')
-        include sidebar.jade
+        include sidebar
         div(class='col-sm-8 col-md-9') 
           h1
-            = userobj.first_name + ' ' + userobj.last_name
+            = roleobj.title
+          p
+            = roleobj.description
           table(class='table')
             thead
               tr
-                th Namn
+                th Användare
                 th Grupp
                 th E-post
                 th Start
@@ -27,8 +29,8 @@ block content
               each mandate in mandates
                 tr
                   th
-                    a(href='/position/' + mandate.Role.identifier)
-                      = mandate.Role.title
+                    a(href='/user/' + mandate.User.kthid)
+                      = mandate.User.first_name + " " + mandate.User.last_name
                   th
                     = mandate.Role.Group.name
                   th
