--- a/views/index.pug
+++ b/views/index.pug
@@ -5,7 +5,7 @@ block content
       script(type="text/javascript").
 
       div(class='row')
-        include sidebar.jade
+        include sidebar
         div(class='col-sm-8 col-md-9')
           h1 Aktuella mandat
           table(class='table')
