now hides inactive roles

--- a/views/admin.pug
+++ b/views/admin.pug
@@ -43,6 +43,7 @@ block content
                 = group.name
           input(type="text", name="identifier", placeholder="identifierare" required)
           input(type="email", name="email", placeholder="email" required)
+          input(type="checkbox", name="active")
           input(type="submit")
 
 
