--- a/views/index.pug
+++ b/views/index.pug
@@ -17,19 +17,8 @@ block content
                 th Nuvarande innehavare
             tbody
               each rolemandate in rolemandates
-                if !rolemandate.Mandates.length
-                  tr
-                    th
-                      a(href='/position/' + rolemandate.identifier)
-                        = rolemandate.title
-                    th
-                      = rolemandate.Group.name
-                    th
-                      = rolemandate.email
-                    th 
-                      = '(Vakant)'
-                else
-                  each mandate in rolemandate.Mandates
+                if rolemandate.active || isadmin
+                  if !rolemandate.Mandates.length
                     tr
                       th
                         a(href='/position/' + rolemandate.identifier)
@@ -39,8 +28,20 @@ block content
                       th
                         = rolemandate.email
                       th 
-                        a(href='/user/' + mandate.User.kthid)
-                          = mandate.User.first_name + " " + mandate.User.last_name
+                        = '(Vakant)'
+                  else
+                    each mandate in rolemandate.Mandates
+                      tr
+                        th
+                          a(href='/position/' + rolemandate.identifier)
+                            = rolemandate.title
+                        th
+                          = rolemandate.Group.name
+                        th
+                          = rolemandate.email
+                        th 
+                          a(href='/user/' + mandate.User.kthid)
+                            = mandate.User.first_name + " " + mandate.User.last_name
 
         div(class='clear')
       
