--- a/views/position.pug
+++ b/views/position.pug
@@ -29,6 +29,7 @@ block content
                   -var y = date.getFullYear();
                   -return d+' '+m+' '+y;
               -} 
+              -function date(dateString) {return date.getDate();}
               each mandate in mandates
                 if isadmin
                   tr
@@ -41,9 +42,9 @@ block content
                     th
                       = mandate.Role.email
                     th
-                      input(type="date", name="start", value=mandate.start, required) 
+                      input(type="date", name="start", value=#{date(mandate.start)}, required) 
                     th 
-                      input(type="date", name="end", value=mandate.end, required)
+                      input(type="date", name="end", value=#{date(mandate.start)}, required)
                     th
                       input(type="submit", value="Update")
                   form(action="/mandate/delete", method="post")
