--- a/views/position.pug
+++ b/views/position.pug
@@ -5,60 +5,35 @@ block content
       div(class='row')
         include sidebar
         div(class='col-sm-8 col-md-9') 
-          h1
-            = roleobj.title
-          p
-            = roleobj.description
-          table(class='table')
-            thead
-              tr
-                th Användare
-                th Grupp
-                th E-post
-                th Start
-                th Slut
-                if isadmin
-                  th Submit
-                  th Delete
-            tbody
-              -function prettyDate(dateString){
-                  -var date = new Date(dateString);
-                  -var d = date.getDate();
-                  -var monthNames = [ "Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec" ];
-                  -var m = monthNames[date.getMonth()];
-                  -var y = date.getFullYear();
-                  -return d+' '+m+' '+y;
-              -} 
-              each mandate in mandates
-                if isadmin
-                  tr
-                  form(action="/mandate/update", method="post")
-                    th
-                      a(href='/user/' + mandate.User.kthid)
-                        = mandate.User.first_name + " " + mandate.User.last_name
-                    th
-                      = mandate.Role.Group.name
-                    th
-                      = mandate.Role.email
-                    th
-                      input(type="date", name="start", value=new Date(mandate.start).toJSON().slice(0,10), required) 
-                    th 
-                      input(type="date", name="end", value=new Date(mandate.end).toJSON().slice(0,10), required)
-                    th
-                      input(type="submit", value="Update")
-                  form(action="/mandate/delete", method="post")
-                    th 
-                      input(type="submit", value="Delete")
-
-
-                else
+          if isadmin
+            include admin/position.pug
+          else
+            h1
+              = roleobj.title
+            p
+              = roleobj.description
+            table(class='table')
+              thead
+                tr
+                  th Användare
+                  th Grupp
+                  th Start
+                  th Slut
+              tbody
+                -function prettyDate(dateString){
+                    -var date = new Date(dateString);
+                    -var d = date.getDate();
+                    -var monthNames = [ "Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec" ];
+                    -var m = monthNames[date.getMonth()];
+                    -var y = date.getFullYear();
+                    -return d+' '+m+' '+y;
+                -} 
+                each mandate in mandates
                   tr
                     th
                       a(href='/user/' + mandate.User.kthid)
                         = mandate.User.first_name + " " + mandate.User.last_name
                     th
                       = mandate.Role.Group.name
-                    th
-                      = mandate.Role.email
                     th #{prettyDate(mandate.start)}
                     th #{prettyDate(mandate.end)}
