--- a/views/admin/position.pug
+++ b/views/admin/position.pug
@@ -57,7 +57,8 @@ table(class='table')
   tbody
     each mandate in mandates
       tr
-      form(action="/mandate/update", method="post")
+      form(action="/mandates/update", method="post")
+        input(type='hidden', value=mandate.id, name='id')
         th
           a(href='/user/' + mandate.User.kthid)
             = mandate.User.first_name + " " + mandate.User.last_name
@@ -69,6 +70,6 @@ table(class='table')
           input(type="date", name="end", value=new Date(mandate.end).toJSON().slice(0,10), required)
         th
           input(class='btn-warning', type="submit", value="Update")
-      form(action="/mandate/delete/"+mandate.id, method="post")
+      form(action="/mandates/delete/"+mandate.id, method="post")
         th 
           input(class='btn-danger', type="submit", value="Delete")
