--- a/views/admin/position.pug
+++ b/views/admin/position.pug
@@ -1,6 +1,3 @@
-form(action="/roles/delete/"+roleobj.id, method="post")
-  div(class='form-group')
-    input(id='roledelete', class='btn-danger', type='submit', value='Delete')
 form(class='form-horizontal', action="/roles/update", method="post" )
   input(type='hidden', value=roleobj.id, name='id')
   div(class='form-group')
@@ -73,3 +70,13 @@ table(class='table')
       form(action="/mandates/delete/"+mandate.id, method="post")
         th 
           input(class='btn-danger', type="submit", value="Delete")
+div(class='divider')
+form(action="/roles/delete/"+roleobj.id, method="post")
+  div(class='form-group')
+    label(for='roleident', class='col-sm-4 control-label') Identifier
+    div(class='col-sm-8')
+      input(id='roleident', class='form-control' type='text', value="ändra mig", name='identifier')
+  div(class='form-group')
+    label(for='roledelete' class='col-sm-12 control-label') Tar bort posten, om ovan identifier är korrekt annars händer inget.
+    div(class='col-sm-offset-2 col-sm-12')
+      input(id='roledelete', class='btn-danger', type='submit', value='Delete')
