/position/:ident -> /positon/id/:id
Updates all the relevant places. New endpoint name so that bugs surface quickly in case I missed anything, or if anyone is still using the old identifier format.

--- a/views/index.pug
+++ b/views/index.pug
@@ -21,7 +21,7 @@ block content
                   if !rolemandate.Mandates.length
                     tr
                       th
-                        a(href='/position/' + rolemandate.identifier)
+                        a(href='/position/id/' + rolemandate.id)
                           = rolemandate.title
                       th
                         = rolemandate.Group.name
@@ -33,7 +33,7 @@ block content
                     each mandate in rolemandate.Mandates
                       tr
                         th
-                          a(href='/position/' + rolemandate.identifier)
+                          a(href='/position/id/' + rolemandate.id)
                             = rolemandate.title
                         th
                           = rolemandate.Group.name
