--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,7 +3,7 @@ html
   head
     meta(charset="utf-8")
     title Dfunkt
-    link(rel='stylesheet', href='http://aurora.datasektionen.se/', type="text/css")
+    link(rel='stylesheet', href='//aurora.datasektionen.se/', type="text/css")
     link(rel="icon", href="/public/favicon.png", type="image/png")
     script(type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react/15.1.0/react.min.js")
     script(type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react/15.1.0/react-dom.min.js")
