--- a/views/index.pug
+++ b/views/index.pug
@@ -15,6 +15,7 @@ block content
                 th Grupp
                 th E-post
                 th Nuvarande innehavare
+                th Slutdatum
             tbody
               each rolemandate in rolemandates
                 if rolemandate.active || isadmin
@@ -30,6 +31,8 @@ block content
                           = rolemandate.email
                       th 
                         = '(Vakant)'
+                      th
+                          = mandate.end
                   else
                     each mandate in rolemandate.Mandates
                       tr
@@ -44,6 +47,8 @@ block content
                         th 
                           a(href='/user/' + mandate.User.kthid)
                             = mandate.User.first_name + " " + mandate.User.last_name
+                        th
+                          = mandate.end
 
         div(class='clear')
       
