--- a/views/index.pug
+++ b/views/index.pug
@@ -47,7 +47,7 @@ block content
                           a(href='/user/' + mandate.User.kthid)
                             = mandate.User.first_name + " " + mandate.User.last_name
                         th
-                          = mandate.end
+                          = new Date(mandate.end).toISOString().split('T')[0]
 
         div(class='clear')
       
