Add export functionality and sidebar link

--- a/views/sidebar.pug
+++ b/views/sidebar.pug
@@ -14,4 +14,8 @@ div(class='col-sm-4 col-md-3')
           a(href='/kthpeople') Användarsökningsfunktion
       if isadmin
         li
+          a(href='/export') Användarexport
+      if isadmin
+        li
           a(href='/admin') Adminstrativt
+      
