Fix typo in sidebar.pug

--- a/views/sidebar.pug
+++ b/views/sidebar.pug
@@ -14,7 +14,7 @@ div(class='col-sm-4 col-md-3')
           a(href='/kthpeople') Användarsökningsfunktion
       if isadmin
         li
-          a(href='/export') Användarexport
+          a(href='/exports') Användarexport
       if isadmin
         li
           a(href='/admin') Adminstrativt
