Add statistics link to sidebar

--- a/views/sidebar.pug
+++ b/views/sidebar.pug
@@ -18,4 +18,6 @@ div(class='col-sm-4 col-md-3')
       if isadmin
         li
           a(href='/admin') Adminstrativt
+      li 
+        a(href='/stats') Statistik
       
