Update sort button style in stats.pug

--- a/views/stats.pug
+++ b/views/stats.pug
@@ -8,8 +8,8 @@ block content
         include sidebar
         div(class='col-sm-8 col-md-9') 
             h1 Statistik 
-                h2 Sortera på  |
-                    button(onclick='toggleStatDisplay()') Antal dagar
+                h2 Sortera på
+                    button(class='button' style='margin: 0.5em' onclick='toggleStatDisplay()') Antal dagar
             table(id='mandateCountTable')  
                 thead
                     tr
