--- a/views/index.pug
+++ b/views/index.pug
@@ -6,7 +6,7 @@ block content
 
       div(class='row')
         include sidebar
-        div(class='col-sm-8 col-md-9')
+        div(class='col-sm-8 col-md-9 scroll')
           h1 Aktuella mandat
           table(class='table')
             thead
